--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_blue_classic: ^0.0.4
   all_bluetooth: ^0.1.0
   excel: ^4.0.6
+  permission_handler: ^11.4.0
+  open_filex: ^4.6.0
 
 
 dev_dependencies:
