--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,11 @@ dependencies:
   excel: ^4.0.6
   permission_handler: ^11.4.0
   open_filex: ^4.6.0
+  flutter_launcher_icons: ^0.14.2
+  launcher_name: ^1.0.2
+  flutter_native_splash: ^2.4.4
+
+
 
 
 dev_dependencies:
@@ -62,6 +67,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+launcher_name:
+  default: "Speed Indicator"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
